ch16/code/some-pod-with-only-resource-requests.yaml
apiVersion: v1
kind: Pod
metadata:
  name: some-pod-with-only-resource-requests
spec:
  containers:
    - name: some-container
      image: g1g1/py-kube:latest
      resources:
        requests:
          cpu: "1"
          memory: 1Gi
        limits:
          cpu: "1"
          memory: 1Gi
      command:
        - sleep
        - "9999"
